{
    "name": "ControllSystem",
    "maps": [
        {
            "name": "Player",
            "id": "19163360-daf6-4dfd-81d3-55f2c9bf6f3c",
            "actions": [
                {
                    "name": "TouchClick",
                    "type": "Button",
                    "id": "9a06de4b-8e4c-4de6-8acd-edf933409438",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "51a1ae54-c7e1-4c7d-b3be-53b347e58ad5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e33f16dc-42a3-4eef-9bf8-a159e4ec529f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Gamepad;Android;Keyboard and Mouse",
                    "action": "TouchClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49bb723a-6289-495b-ac6b-269def52c306",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Android",
            "bindingGroup": "Android",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}